Updated the UI and added database logic